# arxiv-preprint-parsing

./: README.md
benchmarking/benchmarking_lora/: README.md  benchmark_author-affiliation_parsing_vllm_modal.py  prompt.txt
benchmarking/benchmarkling_vlm/: README.md  benchmark_author-affiliation_parsing_minicpm_vllm_modal.py  benchmark_author-affiliation_parsing_rolmocr_vllm_modal.py
benchmarking/evaluation/: README.md  data_adapter.py  evaluation_utils.py  generic_evaluator.py  matcher.py  run_evaluation.py
get-openalex-source-author-affiliation-completeness/: Cargo.toml  README.md
get-openalex-source-author-affiliation-completeness/src/: main.rs
inference/dots-ocr_batch_inference_vllm_modal/: README.md  dots-ocr_batch_inference_vllm_modal.py  requirements.txt
inference/rolmocr_batch_inference_vllm_modal/: README.md
inferrence/dots-ocr_batch_inference_vllm_modal/: README.md  dots-ocr_batch_inference_vllm_modal.py
inferrence/rolmocr_batch_inference_vllm_modal/: README.md  rolmocr_batch_inference_vllm_modal.py
training/lm_parse_affiliations/: prompt.py  reward.py  train.py
utils/analyze-null-affiliations/: README.md  analyze_null_affiliations.py
utils/check_pdf_files/: README.md  check_pdf_files.py
utils/compare_evals/: README.md  compare_evals.py
utils/convert_annotation_csv_to_json/: README.md  convert_annotation_csv_to_json.py
utils/convert_openalex_to_test_format/: README.md  convert_openalex_to_test_format.py
utils/download_arxiv_pdfs/: README.md
utils/kaggle_arxiv_dataset_dl/: .gitignore  README.md  download_iterate.py  (+1 more)
(+51 files in other folders)
