[package]
name = "get-openalex-source-author-affiliation-completeness"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
flate2 = "1.0"
glob = "0.3"
indicatif = "0.17" # Check for latest version
log = "0.4"
num_cpus = "1.16"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5.0" # Or newer version if available
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] } # For timestamping